Support all current reserved opcodes from HotSpot